examples/nginx-examples/pods-nginx.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    environment: qa
    app: nginx
    used: testing
  annotations:
    notes: this is my testing environment for kubernetes
spec:
  containers:
    - name: nginx
      image: nginx:latest
