examples/nginx-examples/nginx-loadbalancer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 80  # the kubernetes service port
      targetPort: 30012  # the node port, external kubernetes access
  selector:
    type: frontend
