examples/nginx-examples/nginx-project.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer
spec:
  selector:
    tier: frontend
  # ports:
  type: LoadBalancer
    # - protocol: TCP
    #   port: 80
    #   targetPort: 9376
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  ports:
    - port: 9376
      targetPort: 80
      nodePort: 30022
