examples/nginx-examples/nginx-replicaset-nodeport-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport-service
spec:
  type: NodePort
  ports:
    - targetPort: 80  # the pod internal port
      port: 80  # the kubernetes service port
      nodePort: 30011  # the node port, external kubernetes access
  selector:
    type: frontend
