examples/nginx-examples/nginx-service-loadbalancer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-loadbalancer
spec:
  selector:
    app: nginx-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
#  clusterIP: 10.0.171.239
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 192.168.50.127
