examples/nginx-examples/nginx-service-nodeport.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nod-service
spec:
  type: NodePort
  selector:
    app: myapp
    type: front-end
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30005
