examples/nginx-examples/service-nginx.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
